SonarQube issues were resolved